Up to jdk17.